welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: ';' expected but 'else' found.
		else if ("R") { droite();avance();}
                ^